Modificación de texto

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <section class="parrafo"> 
         <h1> Alfabeto invertido  </h1>
         <p> <b> "Mi abuela me enseñó </b> que los mejores mensajes secretos se escriben en alfabeto invertido.
-        Es muy fácil aprenderlo, pero toma tiempo descifrar el texto oculto. Lo primero que debes hacer es poner dos filas con el alfabeto, una en el orden usal y la otra con el alfabeto invertido." </p>
+        Es muy fácil aprenderlo, pero toma tiempo descifrar el texto oculto. Lo primero que debes hacer es poner dos filas con el alfabeto, una en el orden usal y la otra con el alfabeto invertido. </p>
         <img src="./assets/img/alfabeto.png" alt="" class="alfabeto">
     
-        <p> Escribe tu mensaje reemplazando cada letra con la que corresponda en el alfabeto invertido. Por ejemplo: si quisieras escribir 'VERDURA', te quedaría  'EVIWFIZ'. <br>  <span> - Mila Scott. (El despertar del fuego) </span> </p>
+        <p> Escribe tu mensaje reemplazando cada letra con la que corresponda en el alfabeto invertido. Por ejemplo: si quisieras escribir 'VERDURA', te quedaría  'EVIWFIZ'." <br>  <span> - Mila Scott. (El despertar del fuego) </span> </p>
         </section>
 
         
