Ahora el input recibirá su información en mayus

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 
             <div class="contenCajas">
 
-
-                <textarea  id="elemTraducir"> </textarea>
+                <textarea  id="elemTraducir" onkeyup="javascript:this.value=this.value.toUpperCase();">  </textarea>
                 <textarea id="resultado" disabled> </textarea>
 
             </div>
